# dotfiles

./: .Xmodmap  .bash_profile  .bash_profile_shiftjis  .bashrc  .clinerules  .gitconfig  .gitignore  .gitmodules  .gtkrc-2.0  .latexmkrc  .profile  .vimrc  .vimrc_shiftjis  .xinitrc  .xmobarrc  .xmodmaprc  .xmodmaprc.swo  README.md  generate_shiftjis.sh  init-all.sh  init-bash-tex.sh  init-dotfiles.sh  init-vim.sh  init-xmonad.sh  init.sh  moxc_keymap.txt
.gtkrc-app/: chromium.rc  thunar.rc  xfce.rc
.mplayer/: config
.vim/: .vim
.xmonad/: .xmonad.hs.swo  history  xmonad.hi  xmonad.hs
configs/: add_gvim_menu.reg  add_msys2_menu.reg  bugn - shortcut.lnk
dotfiles/: .Xmodmap  .Xmodmap_default  .bash_profile  .bashrc  .clang-format  .clang-tidy  .clinerules.md  .gitconfig  .gitignore  .jshintrc  .latexmkrc  .lesskey  .mime.types  .minttyrc  .tmux.conf  .wgetrc  .xbindkeysrc  .xinitrc  .xmobarrc
dotfiles/.config/sway/swayhelper/: .gitignore  Makefile  pyproject.toml  start_daemon.sh
dotfiles/.config/sway/swayhelper/swayhelper/: __init__.py  commands.py  constants.py  daemon.py  generate_sway_config.py  helper.py  ipc.py  layout.py  state.py  tree_utils.py  window_ops.py
dotfiles/.config/sway/swayhelper/tests/: __init__.py  test_commands.py  test_daemon.py  test_helper.py
firefox/: vimium.conf
fonts/: install-font-linux.sh  set-default-font-windows.reg  test_fonts.cpp
formatter/: .clang-tidy  memo.md
memo/: install_archlinux.txt  install_cuda6.5_with_runfile.txt  install_cuda7.0_with_gtx980ti.txt  install_cuda7.5_with_gtx980ti.txt  install_libfreenect2.txt  (+8 more)
(+201 files in other folders)
