[tool.poetry]
name = "swayhelper"
version = "0.1.0"
description = "Sway IPC tiling daemon and workspace helper"
authors = ["takiyu <takiyu1025.txu.development@gmail.com>"]
packages = [{include = "swayhelper"}]

[tool.poetry.scripts]
sway-tiling-daemon = "swayhelper.daemon:main"
sway-helper = "swayhelper.helper:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
i3ipc = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.356"
flake8 = "^7.0.0"
autopep8 = "^2.0.4"
isort = "^5.13.2"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.autopep8]
max_line_length = 79
aggressive = 1
indent_size = 4
recursive = true
experimental = true

[tool.isort]
line_length = 79
multi_line_output = 0
include_trailing_comma = false
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
force_single_line = false

[tool.flake8]
max-line-length = 79

[tool.pycodestyle]
ignore = ["E112", "E123", "E126", "E133", "E226", "E241", "E242",
          "E704", "W503", "W504", "W505"]

[tool.pyright]
include = ["swayhelper", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
